@@ -1,10 +1,10 @@
 {
-  "count": 4,
+  "count": 3,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-09-14T00:00:00Z",
-      "count": 4,
+      "timestamp": "2022-10-16T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
